# chatwithpdf

./: .gitignore  build.gradle.kts  gradle.properties  keystore_base64.txt  settings.gradle.kts  studio64.exe.vmoptions.optimized
.github/workflows/: android-build.yml  pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/softweb/chatwithpdf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/softweb/chatwithpdf/: ChatAdapter.java  ChatApiClient.java  ChatMessage.java  MainActivity.java  PdfTextExtractor.java  PrivacyPolicyActivity.java  QwenInference.java  VolleyMultipartRequest.java
app/src/main/res/drawable/: bot_message_background.xml  ic_hamburger_menu.xml  ic_launcher_foreground.xml  ic_pdf_logo.xml  input_background.xml  user_message_background.xml
app/src/main/res/layout/: activity_main.xml  activity_privacy_policy.xml  item_bot_message.xml  item_user_message.xml  nav_header.xml
app/src/main/res/menu/: drawer_menu.xml  main_menu.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/softweb/chatwithpdf/: ExampleUnitTest.java
backend/: README.md  main.py  pyproject.toml
docs/: privacy-policy.html
gradle/wrapper/: gradle-wrapper.properties
